<resources>
    <string name="app_name" translatable="false">Tabourless</string>
    <string name="title_queues">Queues</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_complete_profile">Complete Profile</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="edit_button_title">Edit</string>
    <string name="title_add_place_add_counter">Add A Counter</string>
    <string name="title_customers">Queue</string>
    <string name="title_messages">Direct messages</string>
    <string name="title_search">Search</string>
    <string name="title_add_place">Add A Place</string>
    <string name="title_logout">Log out</string>
    <string name="title_Photo">Photo Display</string>
    <string name="menu_save">Save</string>
    <string name="upload_button">Upload</string>
    <string name="popup_menu_block">Block</string>
    <string name="popup_menu_block_delete">Block and hide conversation</string>
    <string name="popup_menu_report">Report</string>
    <string name="popup_menu_unblock">Unblock</string>
    <string name="popup_menu_copy_text">Copy message text</string>
    <string name="popup_menu_delete_message">Delete message for you</string>
    <string name="popup_menu_delete_message_all">Delete message for everyone</string>
    <string name="popup_menu_report_message">Report message</string>
    <string name="clipboard_label_copied_text">Copied Text</string>
    <string name="message_button_hint">Message</string>
    <string name="block_report_button_hint" formatted="false">Block\\Report</string>
    <string name="unblock_report_button_hint" formatted="false">Unblock\\Report</string>
    <string name="add_marker_title">Add Place</string>
    <string name="add_marker_snippet">Hold to change position</string>
    <string name="add_service_button_title">add more services</string>
    <string name="add_counter_button_title">add more counters</string>
    <string name="send_report_button">Send report</string>
    <string name="user_gender_headline">Gender</string>
    <string name="user_birth_headline">Year of birth</string>
    <string name="user_age_headline">Age</string>
    <string name="user_avatar_headline">Profile Picture</string>
    <string name="user_cover_headline">Cover Picture</string>
    <string name="user_name_hint">Name</string>
    <string name="user_disability_headline">Disability</string>
    <string name="crop_activity_title">Crop</string>
    <string name="send_message_hint">Type a message…</string>
    <string name="user_active_now">Active Now</string>
    <string name="user_active_ago">Active %1$s</string>
    <string name="add_counter_filters_headline">Customers\' filters</string>
    <string name="add_counter_open_headline">Open</string>
    <string name="add_counter_open_description">Disable if counter is closed temporarily.</string>
    <string name="add_place_name_title">Name</string>
    <string name="add_place_name_hint">Pizza Hut, Galaxy cineplex cinema, Emigration Administration</string>
    <string name="add_place_name_helper">Place\'s name will help others to search for it.</string>
    <string name="add_place_parent_title">Container place</string>
    <string name="add_place_parent_hint">Carrefour, Mall of Arabia, The Mogamma</string>
    <string name="add_place_parent_helper">Only add a container place if this place is located within another bigger place.</string>
    <string name="add_place_queue_title">Service</string>
    <string name="select_queue_title">Select service</string>
    <string name="book_button_title">Book</string>
    <string name="unbook_button_title">Unbook</string>
    <string name="add_place_queue_hint">Customer service, Tickets booking</string>
    <string name="add_place_queue_helper">If this place provides multiple services, add them all to create separate waiting list for each service.</string>
    <string name="add_place_counter_title">Counter name*</string>
    <string name="add_place_counter_hint">Main, Counter A, Elderly Counter</string>
    <string name="add_place_counter_helper">If the counter has no sign, use names like (counter A,B) instead of (1,2) to be clear they are named from left to right. If you see a counter serving multiple queues, add a separate counter for each queue.</string>
    <string name="customer_number_title" translatable="false">#:</string>
    <string name="queue_info_current_number">Current token: %1$d</string>
    <string name="queue_info_your_number">Your token: %1$d</string>
    <string name="queue_info_ahead_customers_more_less">Customers Ahead: %1$d or less</string>
    <string name="queue_info_ahead_customers">Customers Ahead: %1$d</string>
    <string name="queue_info_total_customers">Total customers: %1$d</string>
    <string name="queue_info_expected_waiting">Expected waiting: %1$s</string>
    <string name="queue_info_average_waiting">Average waiting: %1$s</string>
    <string name="queue_info_service_time">Service duration: %1$s</string>
    <string name="report_dialog_title">Report User?</string>
    <string name="report_dialog_message">If someone is in immediate danger, call local emergency service.\n\nPlease select the reason for reporting this user or content, we won’t let the person know who reported them.</string>
    <string name="allow_notification_title">Allow notifications</string>
    <string name="allow_notification_message">The app needs permission to send notifications in order to notify you when it is your turn in a queue, or when some one sends you a message.</string>
    <string name="notification_settings_message">The app needs permission to send notifications in order to notify you when it is your turn in a queue, or when some one sends you a message. \n\n Do you want to go to settings to enable notifications?</string>
    <string name="sign_in_cancelled">Sign in has been cancelled</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="unknown_error">Unknown error occurred</string>
    <string name="upload_image_error">Sorry, couldn\'t upload your image.</string>
    <string name="download_image_error">Sorry, couldn\'t download your image.</string>
    <string name="update_profile_error">Sorry, couldn\'t update your profile.</string>
    <string name="empty_profile_avatar_error">Profile picture can\'t be blank.</string>
    <string name="empty_profile_name_error">You must enter your name.</string>
    <string name="send_message_error">Sorry, couldn\'t send your message.</string>
    <string name="confirm_block_dialog_message">You won\'t be able to exchange messages with this person anymore.</string>
    <string name="confirm_block_delete_dialog_message">You won\'t be able to exchange messages with this person anymore and your conversation will be hidden.</string>
    <string name="user_confirm_dialog_enable">Enable</string>
    <string name="user_confirm_dialog_positive">Yes</string>
    <string name="user_confirm_blocking_dialog">Block</string>
    <string name="user_confirm_dialog_negative">Cancel</string>
    <string name="confirm_dialog_positive_button">OK</string>
    <string name="confirm_undo_button">Undo</string>
    <string name="chat_blocked_alert_dialog_title">Conversation Disabled</string>
    <string name="chat_blocked_dialog_message">Communication with this person is currently not allowed.</string>
    <string name="storage_permission_dialog_title">Camera and storage permissions</string>
    <string name="storage_permission_dialog_message">The app needs access to your storage to fitch photos from your gallery. Also, if you want to take a picture you must grant us access to your camera.</string>
    <string name="permission_denied">Permission to get your current location denied</string>
    <string name="location_access_required">Location access is required to fetch nearby places and queues.</string>
    <string name="access_location">Enable location access</string>
    <string name="permission_not_granted">Sorry, we cannot access this feature until you grant us permission.</string>
    <string name="permission_not_granted_title">Permission not granted</string>
    <string name="add_place_name_error">Place\'s name can\'t be empty.</string>
    <string name="add_place_service_error">Service\'s name can\'t be empty.</string>
    <string name="add_place_service_empty_error">You must add at least one service.</string>
    <string name="add_place_counter_empty_error">You must add at least one counter for each service.</string>
    <string name="add_place_counter_error">Counter\'s name can\'t be empty.</string>
    <string name="select_service_error">You must select a service.</string>
    <string name="counters_closed_error">There is no open counter for this service.</string>
    <string name="fetch_place_error">Failed to get place\'s data, try again later.</string>
    <string name="book_queue_error">Failed to join the queue, try again later.</string>
    <string name="unbook_queue_error">Failed to cancel your booking, try again later.</string>
    <string name="book_queue_no_connection_alert">No internet connection, you will receive your token once you reconnect.</string>
    <string name="book_queue_suitable_counters_error">The service has no designated counter for you.</string>
    <string name="fetch_profile_error">Failed to fetch your profile data, try again later.</string>
    <string name="save_place_error">Failed to save the place, try again later.</string>
    <string name="alert_confirm_removing_customer">%1$s has been removed.</string>
    <string name="alert_confirm_removing_booking">Your booking has been canceled.</string>
    <string name="alert_confirm_removing_queue">Queue has been deleted.</string>
    <string name="customer_name_constant">Customer</string>
    <string name="swipe_item_disabled_toast">Can\'t remove unsevered customers.</string>
    <string name="joined_time_ended">Ended</string>
    <string name="cover_image_description">Your cover image</string>
    <string name="profile_image_description">Your Profile picture</string>
    <string name="add_image_button_description">Add Profile picture button</string>
    <string name="original_profile_image_description">Profile Image</string>
    <string name="send_text_icon">Sending message button</string>
    <string name="message_sent_icon">Message sent icon</string>
    <string name="remove_counter_icon">Remove counter button</string>
    <string name="queue_item_location_icon">Place icon</string>
    <string name="bottom_sheet_maximize_icon">Maximize icon</string>
    <string name="number_icon_description">Token icon</string>
    <string name="customers_queue_icon_description">Customer\'s icon</string>
    <string name="time_icon_description">waiting icon</string>
    <string name="required_helper">*Required</string>
    <string name="notification_queue_title">%1$s queue</string>
    <string name="notification_default_queue_title">Queue\'s status</string>
    <string name="notification_message_title">New message</string>
    <string name="notification_queue_body_front">It\'s your turn now. Go to counter: %1$s.</string>
    <string name="notification_message_body">%1$s sent you a new message.</string>
    <string name="notification_default_queue_body_front">It\'s your turn now. Go to the front</string>
    <string name="notification_default_queue_body_next">Get ready you are next. Get closer to the front.</string>
    <string name="notification_default_message_body">You received a new message.</string>
    <string name="notification_item_queue_body_front">It\'s your turn in %1$s queue. Go to %2$s counter.</string>
    <string name="notification_item_queue_body_next">You are next in %1$s queue. Get closer to the front.</string>
    <string name="queue_notification_channel_name">Queues</string>
</resources>